feat(system): add CSupportInfo class for centralized support URLs
Introduces a singleton class that provides a single source of truth
for homepage, documentation and forum URLs. Both GUI (imageinfo) and
API (controlapi) now use this central class instead of duplicating
the URL resolution logic.

URL resolution priority:
1. /etc/os-release (freedesktop.org standard)
2. IMAGE_VERSION_FILE (legacy /.version)
3. Compile-time defaults

--- a/src/system/Makefile.am
+++ b/src/system/Makefile.am
@@ -41,6 +41,7 @@ libneutrino_system_a_SOURCES = \
 	proc_tools.cpp \
 	settings.cpp \
 	stacktrace.cpp \
+	supportinfo.cpp \
 	sysload.cpp \
 	setting_helpers.cpp
 #	safe_system.c
